// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiseasesColumnConfiguration component should render column "acronym": acronym 1`] = `
<DocumentFragment>
  BROVCA1
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "alternative_names": alternative_names 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Breast cancer familial 1
    </li>
    <li>
      Ovarian cancer familial 1
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "cross_references": cross_references 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="no-wrap"
      >
        MIM: 
        <a
          class="external-link"
          href="https://www.omim.org/entry/604370"
          rel="noopener"
          target="_blank"
        >
          604370
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         (phenotype)
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/C2676676"
          rel="noopener"
          target="_blank"
        >
          C2676676
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/C2676677"
          rel="noopener"
          target="_blank"
        >
          C2676677
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/C2676678"
          rel="noopener"
          target="_blank"
        >
          C2676678
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MeSH: 
        <a
          class="external-link"
          href="https://meshb.nlm.nih.gov/record/ui?ui=D001943"
          rel="noopener"
          target="_blank"
        >
          D001943
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MeSH: 
        <a
          class="external-link"
          href="https://meshb.nlm.nih.gov/record/ui?ui=D010051"
          rel="noopener"
          target="_blank"
        >
          D010051
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  A condition associated with familial predisposition to cancer of the breast and ovaries. Characteristic features in affected families are an early age of onset of breast cancer (often before age 50), increased chance of bilateral cancers (cancer that develop in both breasts, or both ovaries, independently), frequent occurrence of breast cancer among men, increased incidence of tumors of other specific organs, such as the prostate.
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    class="no-wrap"
    href="/diseases/DI-01559"
  >
    DI-01559
  </a>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "keywords": keywords 1`] = `<DocumentFragment />`;

exports[`DiseasesColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Breast-ovarian cancer, familial, 1
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28cc_disease%3ADI-01559%29"
      >
        1 UniProtKB entry
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_disease%3ADI-01559%29+AND+%28reviewed%3Atrue%29"
      >
        1 reviewed UniProtKB entry
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
